--- a/service-student.properties
+++ b/service-student.properties
@@ -1,2 +1,2 @@
 server.port=8801
-spring.data.mongodb.uri=mongodb://localhost:27000/studentdb
+spring.data.mongodb.uri=mongodb://localhost:27000/students
