--- a/service-family.properties
+++ b/service-family.properties
@@ -1,2 +1,2 @@
 server.port=8802
-spring.data.mongodb.uri=mongodb://localhost:27001/familydb
+spring.data.mongodb.uri=mongodb://localhost:27001/family
