--- a/service-student.properties
+++ b/service-student.properties
@@ -1,3 +1,3 @@
 server.port=8801
 spring.data.mongodb.uri=mongodb://localhost:27000/students
-config.base.family.uri=http://localhost:8800/api/v2/productos
+config.base.family.uri=http://localhost:8800/api/v1/family
