--- a/service-family.properties
+++ b/service-family.properties
@@ -1,3 +1,3 @@
 server.port=8802
 spring.data.mongodb.uri=mongodb://localhost:27001/family
-config.base.student.uri=http://localhost:8801/api/v1/students
+config.base.student.uri=http://localhost:8801/api/students
