--- a/service-family.properties
+++ b/service-family.properties
@@ -1,3 +1,3 @@
 server.port=8802
-spring.data.mongodb.uri=mongodb://localhost:27001/family
+spring.data.mongodb.uri=mongodb://192.168.99.100:32771/family
 config.base.student.uri=http://localhost:8801/api/students
