--- a/service-student.properties
+++ b/service-student.properties
@@ -1,3 +1,3 @@
 server.port=8801
-spring.data.mongodb.uri=mongodb://localhost:27000/students
+spring.data.mongodb.uri=mongodb://192.168.99.100:32769/students
 config.base.family.uri=http://localhost:8802/api/family
