--- a/eureka-server.properties
+++ b/eureka-server.properties
@@ -1,4 +1,4 @@
 server.port=8761
 
 eureka.client.register-with-eureka=false
-euraka.client.fetch-registry=false
+eureka.client.fetch-registry=false
