--- a/service-course.properties
+++ b/service-course.properties
@@ -2,3 +2,5 @@ server.port=8804
 spring.data.mongodb.uri=mongodb://localhost:27003/courses
 config.base.teacher.uri=http://localhost:8803/api/teachers
 config.base.student.uri=http://localhost:8801/api/students
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
