--- a/service-student.properties
+++ b/service-student.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.uri=mongodb://localhost:32771/students
 config.base.family.uri=http://localhost:8802/api/family
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 2000
