--- a/service-student.properties
+++ b/service-student.properties
@@ -4,4 +4,4 @@ config.base.family.uri=http://localhost:8802/api/family
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 2000
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
