--- a/service-teacher.properties
+++ b/service-teacher.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.uri=mongodb://localhost:27002/teachers
 config.base.family.uri=http://localhost:8802/api/family
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
