--- a/service-family.properties
+++ b/service-family.properties
@@ -3,3 +3,5 @@ spring.data.mongodb.uri=mongodb://localhost:27001/family
 config.base.student.uri=http://localhost:8801/api/students
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
