--- a/service-course.properties
+++ b/service-course.properties
@@ -4,3 +4,5 @@ config.base.teacher.uri=http://localhost:8803/api/teachers
 config.base.student.uri=http://localhost:8801/api/students
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
