--- a/service-family.properties
+++ b/service-family.properties
@@ -1,5 +1,5 @@
 server.port=8802
-spring.data.mongodb.uri=mongodb://localhost:27001/family
+spring.data.mongodb.uri=mongodb://192.168.99.100:32768/family
 config.base.student.uri=http://localhost:8801/api/students
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
