--- a/service-teacher.properties
+++ b/service-teacher.properties
@@ -1,5 +1,5 @@
 server.port=8803
-spring.data.mongodb.uri=mongodb://localhost:27002/teachers
+spring.data.mongodb.uri=mongodb://192.168.99.100:32771/teachers
 config.base.family.uri=http://localhost:8802/api/family
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
