--- a/service-course.properties
+++ b/service-course.properties
@@ -1,5 +1,5 @@
 server.port=8804
-spring.data.mongodb.uri=mongodb://localhost:27003/courses
+spring.data.mongodb.uri=mongodb://192.168.99.100:32773/courses
 config.base.teacher.uri=http://localhost:8803/api/teachers
 config.base.student.uri=http://localhost:8801/api/students
 
