--- a/service-family.properties
+++ b/service-family.properties
@@ -1,6 +1,6 @@
 server.port=8802
 spring.data.mongodb.uri=mongodb://192.168.99.100:32768/family
-config.base.student.uri=http://localhost:8801/api/students
+config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
