--- a/service-course.properties
+++ b/service-course.properties
@@ -1,7 +1,6 @@
 server.port=8804
 spring.data.mongodb.uri=mongodb://192.168.99.100:32773/courses
-config.base.teacher.uri=http://localhost:8803/api/teachers
-config.base.student.uri=http://localhost:8801/api/students
+config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
