--- a/service-teacher.properties
+++ b/service-teacher.properties
@@ -1,5 +1,5 @@
 server.port=8803
-spring.data.mongodb.uri=mongodb://192.168.99.100:32771/teachers
+spring.data.mongodb.uri=mongodb://localhost:32777/teachers
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
