--- a/service-family.properties
+++ b/service-family.properties
@@ -1,5 +1,5 @@
 server.port=8802
-spring.data.mongodb.uri=mongodb://192.168.99.100:32768/family
+spring.data.mongodb.uri=mongodb://localhost:32775/family
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
