--- a/service-student.properties
+++ b/service-student.properties
@@ -1,5 +1,5 @@
 server.port=8801
-spring.data.mongodb.uri=mongodb://localhost:32771/students
+spring.data.mongodb.uri=mongodb://192.168.99.100:32770/students
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
