--- a/service-course.properties
+++ b/service-course.properties
@@ -1,5 +1,5 @@
 server.port=8804
-spring.data.mongodb.uri=mongodb://localhost:32776/courses
+spring.data.mongodb.uri=mongodb://92.168.99.100:32768/courses
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
