--- a/service-course.properties
+++ b/service-course.properties
@@ -1,7 +1,7 @@
 server.port=8804
-spring.data.mongodb.uri=mongodb://192.168.99.100:32768/courses
-config.base.service.uri=http://192.168.99.100:8088
+spring.data.mongodb.uri=mongodb://localhost:32776/courses
+config.base.service.uri=http://localhost:8088
 
-eureka.client.service-url.defaultZone=http://192.168.99.100:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost/eureka
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
