--- a/service-teacher.properties
+++ b/service-teacher.properties
@@ -1,7 +1,7 @@
 server.port=8803
-spring.data.mongodb.uri=mongodb://192.168.99.100:32771/teachers
-config.base.service.uri=http://192.168.99.100:8088
+spring.data.mongodb.uri=mongodb://localhost:32777/teachers
+config.base.service.uri=http://localhost:8088
 
-eureka.client.service-url.defaultZone=http://192.168.99.100:8761/eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
