--- a/service-course.properties
+++ b/service-course.properties
@@ -2,6 +2,6 @@ server.port=8804
 spring.data.mongodb.uri=mongodb://localhost:32776/courses
 config.base.service.uri=http://localhost:8088
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
 
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=2000
