--- a/service-student.properties
+++ b/service-student.properties
@@ -1,6 +1,6 @@
 server.port=8801
-spring.data.mongodb.uri=mongodb://localhost:32771/students
-config.base.service.uri=http://localhost:8088
+spring.data.mongodb.uri=mongodb://students:32771/students
+config.base.service.uri=http://apigateway:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
 
