--- a/service-course.properties
+++ b/service-course.properties
@@ -1,6 +1,6 @@
 server.port=8804
-spring.data.mongodb.uri=mongodb://localhost:32776/courses
-config.base.service.uri=http://localhost:8088
+spring.data.mongodb.uri=mongodb://courses:32776/courses
+config.base.service.uri=http://apigateway:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
 
