--- a/service-course.properties
+++ b/service-course.properties
@@ -1,5 +1,5 @@
 server.port=8804
-spring.data.mongodb.uri=mongodb://courses:32772/courses
+spring.data.mongodb.uri=mongodb://192.168.99.100:32772/courses
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
