--- a/service-family.properties
+++ b/service-family.properties
@@ -1,5 +1,5 @@
 server.port=8802
-spring.data.mongodb.uri=mongodb://192.168.99.100:32769/family
+spring.data.mongodb.uri=mongodb://family:32780/family
 config.base.service.uri=http://192.168.99.100:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
