--- a/service-teacher.properties
+++ b/service-teacher.properties
@@ -1,6 +1,6 @@
 server.port=8803
 spring.data.mongodb.uri=mongodb://teachers:32770/teachers
-config.base.service.uri=http://apigateway:8088
+config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
 
