--- a/service-teacher.properties
+++ b/service-teacher.properties
@@ -1,5 +1,5 @@
 server.port=8803
-spring.data.mongodb.uri=mongodb://teachers:32770/teachers
+spring.data.mongodb.uri=mongodb://localhost:32770/teachers
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
