--- a/service-evaluation.properties
+++ b/service-evaluation.properties
@@ -1,6 +1,6 @@
   
 server.port=8806
-spring.data.mongodb.uri=mongodb://localhost:32770/institutes
+spring.data.mongodb.uri=mongodb://localhost:32786/evaluations
 config.base.service.uri=http://localhost:8088
 
 eureka.client.service-url.defaultZone=http://eurekaserver:8761/eureka
